fix(demo): improve demo pages layout (#1246)
* fix: remove right border of the sidebar

* fix: add line height to 1.5

* fix: fix form fields outline cropped at the left

--- a/apps/demo/src/assets/css/demo.css
+++ b/apps/demo/src/assets/css/demo.css
@@ -14,7 +14,6 @@
   flex-direction: column;
   padding: 1rem 1rem 1rem 0;
   gap: 1rem;
-  border-right: 1px solid #ccc;
 }
 
 .demo > .demo-main {
@@ -110,6 +109,7 @@
 
 @media screen and (min-width: 576px) {
   .demo > .demo-aside {
+    border-right: 1px solid #ccc;
     height: 100%;
     overflow-y: auto;
   }
@@ -117,7 +117,6 @@
   .demo > .demo-main {
     height: 100%;
     overflow-y: auto;
-    padding-right: 2rem;
-    padding-top: 2rem;
+    padding: 2rem;
   }
 }
